--- a/index.html
+++ b/index.html
@@ -4,61 +4,83 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="Studio">Studio</a></li>
-          <li><a href="Portfolio">Portfolio</a></li>
-          <li><a href="Contacts">Contacts</a></li>
+    <header class="page-header">
+      <nav class="page-nav">
+        <a class="logo" href="./index.html"
+          >Web<span class="text-logo">Studio</span></a
+        >
+        <ul class="menu">
+          <li class="menu-item">
+            <a class="menu-link" href="Studio">Studio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="Portfolio">Portfolio</a>
+          </li>
+          <li class="menu-item">
+            <a class="menu-link" href="Contacts">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-page">
+        <h1 class="main-page-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section>
-        <h2>Our benefits</h2>
-        <ul>
+      <section class="benefits">
+        <ul class="section-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="section-list-item-header">Strategy</h3>
+            <p class="section-list-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="section-list-item-header">Punctuality</h3>
+            <p class="section-list-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="section-list-item-header">Diligence</h3>
+            <p class="section-list-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="section-list-item-header">Technologies</h3>
+            <p class="section-list-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -66,7 +88,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -75,8 +97,8 @@
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-list-item-header-name">Mark Guerrero</h3>
+            <p class="section-list-item-text-pro">Product Designer</p>
           </li>
           <li>
             <img
@@ -85,8 +107,8 @@
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-list-item-header-name">Tom Ford</h3>
+            <p class="section-list-item-text-pro">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -95,8 +117,8 @@
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-list-item-header-name">Camila Garcia</h3>
+            <p class="section-list-item-text-pro">Marketing</p>
           </li>
           <li>
             <img
@@ -105,16 +127,84 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-list-item-header-name">Daniel Wilson</h3>
+            <p class="section-list-item-text-pro">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/bankingapp.jpg"
+              alt="Banking App photo"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-list-item-header">Banking App</h3>
+            <p class="section-list-item-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashlesspayment.jpg"
+              alt="Cashless Payment photo"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-list-item-header">Cashless Payment</h3>
+            <p class="section-list-item-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditaionapp.jpg"
+              alt="Meditaion App photo"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-list-item-header">Meditaion App</h3>
+            <p class="section-list-item-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxiservice.jpg"
+              alt="Taxi Service photo"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-list-item-header">Taxi Service</h3>
+            <p class="section-list-item-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screenillustrations.jpg"
+              alt="Screen Illustrations photo"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-list-item-header">Screen Illustrations</h3>
+            <p class="section-list-item-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/onlincourses.jpg"
+              alt="Online Courses photo"
+              width="360"
+              height="300"
+            />
+            <h3 class="section-list-item-header">Online Courses</h3>
+            <p class="section-list-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-page">
+      <a class="logo" href="./index.html"
+        >Web<span class="text-logo-footer">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
