--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         >
         <ul class="menu">
           <li class="menu-item">
-            <a class="menu-link" href="Studio">Studio</a>
+            <a class="menu-link" href="#studio">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="Portfolio">Portfolio</a>
+            <a class="menu-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="Contacts">Contacts</a>
+            <a class="menu-link" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
-      <address class="address">
+      <address id="contacts" class="address">
         <ul>
           <li>
             <a class="address-link" href="mailto:info@devstudio.com"
@@ -55,7 +55,8 @@
         <h1 class="main-page-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section class="benefits">
+      <section id="studio">
+        <h2 class="section-title">Studio</h2>
         <ul class="section-list">
           <li>
             <h3 class="section-list-item-header">Strategy</h3>
@@ -87,7 +88,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section-portfolio" id="portfolio">
         <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
@@ -163,7 +164,7 @@
               width="360"
               height="300"
             />
-            <h3 class="section-list-item-header">Meditaion App</h3>
+            <h3 class="section-list-item-header">Meditation App</h3>
             <p class="section-list-item-text">App</p>
           </li>
           <li>
