--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h1 class="main-page-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section id="studio">
+      <section>
         <h2 class="section-title">Studio</h2>
         <ul class="section-list">
           <li>
@@ -88,10 +88,10 @@
           </li>
         </ul>
       </section>
-      <section class="section-portfolio" id="portfolio">
+      <section class="section-portfolio">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="section-list-item-portfolio">
             <img
               src="./images/mark.jpg"
               alt="Mark Guerrero avatar"
@@ -101,7 +101,7 @@
             <h3 class="section-list-item-header-name">Mark Guerrero</h3>
             <p class="section-list-item-text-pro">Product Designer</p>
           </li>
-          <li>
+          <li class="section-list-item-portfolio">
             <img
               src="./images/tom.jpg"
               alt="Frontend Developer avatar"
@@ -111,7 +111,7 @@
             <h3 class="section-list-item-header-name">Tom Ford</h3>
             <p class="section-list-item-text-pro">Frontend Developer</p>
           </li>
-          <li>
+          <l class="section-list-item-portfolio" i>
             <img
               src="./images/camila.jpg"
               alt="Camila Garcia avatar"
@@ -120,8 +120,8 @@
             />
             <h3 class="section-list-item-header-name">Camila Garcia</h3>
             <p class="section-list-item-text-pro">Marketing</p>
-          </li>
-          <li>
+          </l>
+          <li class="section-list-item-portfolio">
             <img
               src="./images/daniel.jpg"
               alt="Daniel Wilson avatar"
