--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <h3 class="section-list-item-header-name">Tom Ford</h3>
             <p class="section-list-item-text-pro">Frontend Developer</p>
           </li>
-          <l class="section-list-item-portfolio" i>
+          <li class="section-list-item-portfolio">
             <img
               src="./images/camila.jpg"
               alt="Camila Garcia avatar"
@@ -120,7 +120,7 @@
             />
             <h3 class="section-list-item-header-name">Camila Garcia</h3>
             <p class="section-list-item-text-pro">Marketing</p>
-          </l>
+          </li>
           <li class="section-list-item-portfolio">
             <img
               src="./images/daniel.jpg"
